<resources>
    <string name="app_name">TBC Demo</string>

    <string name="action_config_server">指定服务器</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="logout">登出</string>
    <string name="register">注册</string>
    <string name="default_username">test</string>
    <string name="default_password">123</string>
    <string name="pref_server_host">服务器域名/IP</string>
    <string name="pref_server_host_title">设置服务器域名/IP</string>
    <string name="pref_server_default_host">192.168.1.102</string>
    <string name="pref_server_port">服务器端口</string>
    <string name="pref_server_port_title">服务器端口</string>
    <string name="pref_server_default_port">8080</string>
    <string name="current_user">当前用户：</string>
    <string name="no_user">未登录</string>
    <string name="user_avatar">用户头像</string>
    <string name="refresh">刷新</string>
</resources>
